<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PumpCommand" Id="{5f240ab5-e15e-4283-81db-9512cd15a1c1}">
    <Declaration><![CDATA[TYPE ST_PumpCommand :
STRUCT
	bRunBySpeed  : BOOL;
    bRunByVolume : BOOL;
    bStop        : BOOL;
    bActive      : BOOL;
    eDirection   : E_PumpDirection;
    rSpeed       : REAL;     // % or RPM
    rVolume      : REAL;     // mL or user unit
    bBusy        : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>