<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ValveCommand" Id="{c73469e4-e9ca-4d95-bd9d-3015d4dd47d6}">
    <Declaration><![CDATA[TYPE ST_ValveCommand :
STRUCT
	bMove        : BOOL;
    bStop        : BOOL;
    iTargetPos   : USINT; // 1..6
    bBusy        : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>